# SarvexBackend

./: .env.ec2.example  .env.example  .gitignore  01_foundations.md  06_oracle_settlement.md  11_runbook.md  Makefile  README.md  ROADMAP.md  SarvaEX_02_API_Contracts_Protobufs.md  SarvaEX_03_Database_Schemas_Storage.md  SarvaEX_04_Matching_Engine_Core.md  SarvaEX_05_Core_Backend_Services.md  SarvaEX_07_Gateways_WebSocket_API.md  SarvaEX_09_Demo_Build_Roadmap.md  SarvaEX_10_Production_Hardening_Scaling.md  Sarvaex.pem  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  milestone_updates.md  planning.md
.github/workflows/: ci.yml
cmd/demo-sim/: main.go
cmd/gw-rest/: main.go
db/: README.md
docs/: 01_foundations.md  02_protobufs.md  03_databases.md  04_me_core.md  05_services.md  06_oracle_settlement.md  07_gateways.md  08_frontend.md  09_demo_phase.md  10_production_phase.md  11_runbook.md  12_ec2_vercel_demo_deploy.md
frontend/: .env.example  .env.production.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
pkg/: README.md
proto/: README.md
scripts/: migrate.sh  proto-gen.sh  record-demo.sh  reset-demo.sh  run-demo-sim.sh  run-demo.sh  run-futures-sim.sh  seed-demo-data.sh  start-demo-backend.sh
services/: README.md
services/me-core/: CMakeLists.txt  Dockerfile
services/me-core/src/: main.cpp
services/me-core/src/mecore/: book_state.h  listener_bridge.cpp  listener_bridge.h  me_core_engine.cpp  me_core_engine.h  proto_compat.h  sarva_order.h  shard_state.h
web/: README.md  package.json
(+40 files in other folders)
